--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,1 +1,59 @@
 @import '~bootstrap/scss/bootstrap';
+
+  body {
+    background-color: #92a8d1;
+  }
+  h1 {
+    padding: 5px;
+    color: #cd5c5c;
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 60px;
+    background:	#FFFF99;
+  }
+  h2 {
+    padding: 10px;
+    text-align: center;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+  }
+form {
+  text-align: center;
+}
+
+button1{
+  background-color: #FFFF99;
+  color: #92a8d1;
+  text-align: center;
+  font-size: 60px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: center;
+  display: grid;
+}
+ #board{
+    text-align: center;
+    color: #cd5c5c;
+    padding-top: 10px;
+    position: relative;
+
+
+ }
+.row {
+  width: 200px;
+  height: 300px;
+  margin: 50px auto;
+  color: #cd5c5c;
+}
+button{
+  height: 60px;
+  color:#FFFF99;
+  background-color:#cd5c5c ;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  padding-top: 5px;
+}
+p {
+  align-self: center;
+  font-size: 25px;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
+  text-align: center;
+  position: relative;
+}
