--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -19,28 +19,18 @@
 form {
   text-align: center;
 }
-
-button1{
-  background-color: #FFFF99;
-  color: #92a8d1;
-  text-align: center;
-  font-size: 60px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  text-align: center;
-  display: grid;
-}
- #board{
+ .board{
+    margin: auto;
     text-align: center;
     color: #cd5c5c;
-    padding-top: 10px;
-    position: relative;
-
-
+    // setting max size of board to be 100% of //  the view port
+    max-height: calc(100vh - 75px);
+    max-height: calc(100vh - 75px) ;
  }
-.row {
-  width: 200px;
-  height: 300px;
-  margin: 50px auto;
+.row.board{
+  width: 400px;
+  height: 400px;
+  margin: auto;
   color: #cd5c5c;
 }
 button{
@@ -49,6 +39,8 @@ button{
   background-color:#cd5c5c ;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   padding-top: 5px;
+  border-radius: 8px;
+
 }
 p {
   align-self: center;
